--- a/app/views/create-a-report/index.html
+++ b/app/views/create-a-report/index.html
@@ -210,7 +210,8 @@
 
 
 {{ govukButton({
-  text: "Create the report"
+  text: "Create the report",
+  classes: 'app-button app-button--primary'
 }) }}
 </form>
 
