--- a/app/views/includes/site-header.html
+++ b/app/views/includes/site-header.html
@@ -1,11 +1,12 @@
 <header class="site-header"> 
   <div class="ms-bgColor-communicationPrimary govuk-!-padding-left-2 govuk-!-padding-left-4 govuk-!-padding-right-4 govuk-!-padding-top-4 govuk-!-padding-bottom-4" role="banner">
     <div class="site-header__container ">
-      <div class="site-header__logo">
           <span class="site-header__logotype-text ms-fontColor-white ms-fontSize-16">
-          Office
+          Office 365
           </span>
-      </div>
+           <a title='Reset session data' href='/resetSessionData' class="ms-fontColor-white ms-fontSize-16" style="float:right;">
+        Sign out
+        </a>
     </div>
   </div>
   <div class="govuk-!-padding-left-2 govuk-!-padding-left-4 govuk-!-padding-right-4 govuk-!-padding-top-4 govuk-!-padding-bottom-4" role="banner">
