--- a/app/views/includes/site-header.html
+++ b/app/views/includes/site-header.html
@@ -4,8 +4,11 @@
           <span class="site-header__logotype-text ms-fontColor-white ms-fontSize-16">
           Office 365
           </span>
-           <a title='Reset session data' href='/resetSessionData' class="ms-fontColor-white ms-fontSize-16" style="float:right;">
+           <a title='Reset session data' href='/resetSessionData' class="ms-fontColor-white ms-fontSize-16 header-link">
         Sign out
+        </a>
+        <a title='Reset session data' href='/?user=approver' class="ms-fontColor-white ms-fontSize-16 header-link">
+        Change user to approver
         </a>
     </div>
   </div>
