--- a/app/views/report/approved.html
+++ b/app/views/report/approved.html
@@ -1,11 +1,14 @@
 {% extends "layout_nongov.html" %}
 
 {% block content %}
+
+
 {{ govukPanel({
-    classes: 'ms-bgColor-sharedCyanBlue10',
-    titleText: "Report created",
+    classes: "ms-bgColor-sharedCyanBlue10",
+    titleText: "Report approved",
     html: "Report ID: <br><strong>" + data['report']['id']+ "</strong>"
 }) }}
 
 <p class="govuk-body-s">You can now <a href="/reports" class="govuk-link">view</a> the created report and have it approved</p>
+
 {% endblock %}
