Update session user to that create report id only visible to reporter not approvers

--- a/app/views/includes/sidebar-nav.html
+++ b/app/views/includes/sidebar-nav.html
@@ -1,7 +1,9 @@
 <nav class="sidebar-nav ms-fontSize-14">
   <ul>
   <li><a href="/">Home</a></li>
-  <li><a href="/create-a-report">Create a new report</a></li>
+  {% if 'approver' not in data['user'] %}
+    <li><a href="/create-a-report">Create a new report</a></li>
+  {% endif %}
   <li><a href="/reports">View an existing report</a></li>
   </ul>
 </nav>
