--- a/app/views/report/confirmation.html
+++ b/app/views/report/confirmation.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-
 {{ govukPanel({
     classes: "ms-bgColor-sharedCyanBlue10",
-    titleText: "Report created",
-    html: "Report ID: <br><strong>" + data['report']['id']+ "</strong>"
+    titleText: "Changes to report requested",
+    html: "Report ID: <br><strong>" + report.id+ "</strong>"
 }) }}
 
-<p class="govuk-body-s">You can now <a href="/reports" class="govuk-link">view</a> the created report and have it approved</p>
+<p class="govuk-body-s">You can go <a href="/reports" class="govuk-link">back</a> to the list if reports.</p>
 {% endblock %}
