--- a/app/views/create-a-report/index.html
+++ b/app/views/create-a-report/index.html
@@ -8,65 +8,18 @@
 
 {% block content %}
 <form action="/create-a-report/confirmation" method="post">
-{{ govukSelect({
-  id: "select-policy",
-  name: "report[policyTitle]",
-  label: {
-    text: "What policy are you reporting on?"
-  },
-  items: [
-    {
-      value: "",
-      text: "Select a policy"
-    },
-    {
-      value: "a",
-      text: "A"
-    },
-    {
-      value: "National Retraining Scheme",
-      text: "National Retraining Scheme"
-    },
-    {
-      value: "c",
-      text: "C"
-    },
-    {
-      value: "d",
-      text: "D"
-    }
-  ]
-}) }}
 
-{# {{ govukSelect({
-  id: "policy-status",
-  name: "report[status]",
-  label: {
-    text: "Policy status"
-  },
-  items: [
-    {
-      value: "",
-      text: "Select a status"
-    },
-    {
-      value: "a",
-      text: "A"
-    },
-    {
-      value: "b",
-      text: "B"
-    },
-    {
-      value: "c",
-      text: "C"
-    },
-    {
-      value: "d",
-      text: "D"
-    }
-  ]
-}) }} #}
+<div class="govuk-form-group">
+  <label class="govuk-label" for="available-unit-types">
+    What policy are you reporting on?
+  </label>
+  <select class="govuk-select" id="select-policy" name="report[policyTitle]" >
+        <option value="" {{ 'selected' if checked("report['policyTitle']", "") }}>Select a policy</option>
+        {% for policy in data['policies'] %}
+          <option value="{{ policy.title }}" >{{ policy.title }} - ({{ policy.area }})</option>
+        {% endfor %}
+  </select>
+</div>
 
 {{ govukRadios({
   classes: "govuk-radios--inline rag-rating",
