--- a/app/views/includes/site-header.html
+++ b/app/views/includes/site-header.html
@@ -8,11 +8,11 @@
         Sign out (reset data)
         </a>
         {% if data['user'] and 'approver' in data['user'] %}
-          <a title='set user to reporter' href='/?user=reporter' class="ms-fontColor-white ms-fontSize-16 header-link">
+          <a title='set user to reporter' href='/switch?user=reporter' class="ms-fontColor-white ms-fontSize-16 header-link">
             Change user to reporter
             </a>
         {% else %}
-          <a title='set user to approver' href='/?user=approver' class="ms-fontColor-white ms-fontSize-16 header-link">
+          <a title='set user to approver' href='/switch?user=approver' class="ms-fontColor-white ms-fontSize-16 header-link">
             Change user to approver
           </a>
         {% endif %}
