--- a/app/views/layout_nongov.html
+++ b/app/views/layout_nongov.html
@@ -68,5 +68,6 @@
 {% endblock %}
 {% block bodyEnd %}
   {% include "includes/scripts.html" %}
+  {% block pageScripts %}{% endblock %}
 {% endblock %}
 {% block footer %}{% endblock %}
