--- a/app/views/report/amend-confirmation.html
+++ b/app/views/report/amend-confirmation.html
@@ -1,10 +1,9 @@
 {% extends "layout_nongov.html" %}
 
 {% block content %}
-
 {{ govukPanel({
     classes: "ms-bgColor-sharedCyanBlue10",
-    titleText: "Report amended",
+    titleText: "Report submitted",
     html: "Report ID: <br><strong>" + report.id+ "</strong>"
 }) }}
 
