--- a/app/views/create-a-report/index.html
+++ b/app/views/create-a-report/index.html
@@ -22,7 +22,7 @@
 </div>
 
 {{ govukRadios({
-  classes: "govuk-radios--inline rag-rating",
+  classes: "rag-rating",
   idPrefix: "policy-previousRagRating",
   name: "report[previousRagRating]",
   formGroup: {
@@ -82,7 +82,7 @@
 }) }}
 
 {{ govukRadios({
-  classes: "govuk-radios--inline rag-rating",
+  classes: "rag-rating",
   idPrefix: "policy-currentRagRating",
   name: "report[currentRagRating]",
   fieldset: {
