--- a/app/views/report/amend.html
+++ b/app/views/report/amend.html
@@ -74,7 +74,7 @@
 }) }} #}
 
 {{ govukRadios({
-  classes: "govuk-radios--inline rag-rating",
+  classes: "rag-rating",
   idPrefix: "policy-currentRagRating",
   name: "report[currentRagRating]",
   fieldset: {
